--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "JSONStream",
+  "name": "@sriharithalla/jsonstream",
   "version": "1.3.1",
   "description": "rawStream.pipe(JSONStream.parse()).pipe(streamOfObjects)",
-  "homepage": "http://github.com/dominictarr/JSONStream",
+  "homepage": "http://github.com/SrihariThalla/JSONStream",
   "repository": {
     "type": "git",
-    "url": "git://github.com/dominictarr/JSONStream.git"
+    "url": "git://github.com/SrihariThalla/JSONStream.git"
   },
   "license": "(MIT OR Apache-2.0)",
   "keywords": [
@@ -21,12 +21,12 @@
     "through": ">=2.2.7 <3"
   },
   "devDependencies": {
+    "assertions": "^2.3.4",
+    "event-stream": "^3.3.4",
     "it-is": "~1",
-    "assertions": "~2.2.2",
     "render": "~0.1.1",
-    "trees": "~0.0.3",
-    "event-stream": "~0.7.0",
-    "tape": "~2.12.3"
+    "tape": "^4.6.3",
+    "trees": "~0.0.3"
   },
   "bin": "./index.js",
   "author": "Dominic Tarr <dominic.tarr@gmail.com> (http://bit.ly/dominictarr)",
